made a bunch of tweaks including a theme change, Analytics  and formatting

--- a/404.html
+++ b/404.html
@@ -18,7 +18,6 @@
 
 
 
-
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
 <meta name="twitter:description" content="Saru&#39;s experiments on learning Hugo, Git and github!"/>
@@ -104,6 +103,7 @@
     padding: 20px;
     white-space: pre-wrap;
     font-size: 14px;
+    overflow-x: auto;
   }
 
   div.highlight pre {
@@ -202,25 +202,13 @@
 
 </style>
 
-
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZB0ZJ5YEVW"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-ZB0ZJ5YEVW');
-</script></head>
+</head>
 
 <body>
   <header><a href="/" class="title">
   <h2>Saru&#39;s hugo site ⚡</h2>
 </a>
 <nav><a href="/">Home</a>
-
-<a href="/contact">Contact</a>
-
-<a href="https://github.com/simplysaru">GitHub</a>
 
 
 <a href="/blog">Blog</a>
@@ -232,7 +220,8 @@
 <h2>ʕノ•ᴥ•ʔノ ︵ ┻━┻</h2>
 
   </main>
-  <footer></footer>
+  <footer>Made with <a href="https://github.com/janraasch/hugo-bearblog/">Hugo ʕ•ᴥ•ʔ Bear</a>
+</footer>
 
     
 </body>
